@@ -1,4 +1,5 @@
-OpenVi 7.0.15 -> OpenVi 7.0.16-dev: Fri Feb 25 08:09:17 2022
+OpenVi 7.0.15 -> OpenVi 7.0.16-dev: Fri Feb 25 09:49:59 2022
+        + Provide a more helpful message when ex-mode has background screens
         + Fully redraw screen on refresh with ^L / ^R
         + Make `taglength` work correctly; fix from nvi 1.8x
         + Make `join` work as specified in the POSIX standard; nvi 1.8x
